--- a/index.html
+++ b/index.html
@@ -51,21 +51,34 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">February 2024</span>
-									<h2><a href="https://github.com/AleenaTomy/Crime_pattern_analysis">CRIME PATTERN ANALYSIS USING TABLEAU AND MACHINE LEARNING ALGORITHM<br />
+									<span class="date">July 2025</span>
+									<h2><a href="https://github.com/AleenaTomy/Pawsome_world">Pawsome world<br />
 									</a></h2>
-									<p>The project integrates Tableau's visualization with Python's PrefixSpan to uncover crime patterns, emphasizing advanced 
-										analysis with modern analytics and machine learning. It aims to enhance law enforcement efforts through efficient 
-										data-driven insights for improved investigation and safety strategies.</p>
+									<p>Pawsome World is a responsive website built with HTML, CSS, and JavaScript to promote pet adoption and community engagement. It features user-friendly design, intuitive navigation, and is deployed and maintained via GitHub Pages.</p>
 								</header>
-								<a href="https://github.com/AleenaTomy/Crime_pattern_analysis" class="image main"><img src="images/crime_pattern.jpg" alt="" /></a>
+								<a href="https://aleenatomy.github.io/Pawsome_world/" class="image main"><img src="images/pawsome_world.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/AleenaTomy/Crime_pattern_analysis" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://aleenatomy.github.io/Pawsome_world/" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">February 2024</span>
+										<h2><a href="https://github.com/AleenaTomy/Crime_pattern_analysis">CRIME PATTERN ANALYSIS<br />
+										</a></h2>
+										</header>
+										<a href="https://github.com/AleenaTomy/Crime_pattern_analysis" class="image fit"><img src="images/crime_pattern.jpg" alt="" /></a>
+										<p>The project integrates Tableau's visualization with Python's PrefixSpan to uncover crime patterns, emphasizing advanced 
+											analysis with modern analytics and machine learning. It aims to enhance law enforcement efforts through efficient 
+											data-driven insights for improved investigation and safety strategies.</p>
+									
+										<ul class="actions special">
+										<li><a href="https://github.com/AleenaTomy/Crime_pattern_analysis" class="button">VIEW PROJECT</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">June 2024</span>
@@ -86,7 +99,7 @@
 										<h2><a href="https://github.com/AleenaTomy/Data_exploratory_Project">DATA EXPLORATARY PROJECT<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/AleenaTomy/Data_exploratory_Project" class="image fit"><img src="images/data_exploratory.webp" alt="" /></a>
+									<a href="https://github.com/AleenaTomy/Data_exploratory_Project" class="image fit"><img src="images/data_exploratory.jpg" alt="" /></a>
 									<p>This project performs exploratory data analysis on layoffs_staging2, identifying trends and patterns in layoffs. 
 										It uses CTEs and window functions to analyze maximum values, totals by company, industry, country, and year, 
 										monthly rolling totals, and ranks annual layoffs.</p>
