--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ALEENA THE ANALYST PORTFOLIO</title>
+		<title>ALEENA TOMY PORTFOLIO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>ALEENA THE ANALYST PORTFOLIO<br />
+						<h1>ALEENA TOMY PORTFOLIO<br />
 						
-						<p>Data analyst skilled in  SQL, Python, Power BI, Excel, Tableau
-							 </p>
+						<p>Front-End Developer skilled in HTML, CSS, JavaScript, React, and Responsive Design.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">ALEENA THE ANALYST</a>
+						<a href="index.html" class="logo">ALEENA TOMY</a>
 					</header>
 
 				<!-- Nav -->
